Building our very first graph

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=devide-width, initial-scale:1.0" />
 	<title>Olympic Data Analysis</title>
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 
 </head>
 <body>
