building second graph.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
 
 		<section class="argument">
 		<h1 class="hidden"> Data Point 1 </h1>
-		<h2 class="subhead">Some Heading</h2>
+		<h2 class="subhead">Population example heading</h2>
 		<p></p>
 		<img class="data-graphic" src="images/world-population.png" alt="data-graphic">
+	</section>
+	    <section class="argument">
+		<h1 class="hidden"> Data Point 2 </h1>
+		<h2 class="subhead">USA Men vs Women</h2>
+		<p></p>
+		<img class="data-graphic" src="images/usa-men-v-women.png" alt="data-graphic">
 	</section>
 
 	<footer>
