adding third graph

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
 		<p></p>
 		<img class="data-graphic" src="images/usa-men-v-women.png" alt="data-graphic">
 	</section>
+	<section class="argument">
+		<h1 class="hidden"> Data Point 3 </h1>
+		<h2 class="subhead">Canada vs Usa</h2>
+		<p></p>
+		<img class="data-graphic" src="images/can-v-usa.png" alt="data-graphic">
+	</section>
+
 
 	<footer>
 		<h1 class="hidden">Footer</h1>
