--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<main class="wrapper">
 		<h1 class="hidden"></h1>
-		<h2>My Awesome Analysis</h2>
+		<h2>Winter Olypmics Data Python Visualization</h2>
 		<p></p>
 		
 
@@ -32,11 +32,16 @@
 		<p></p>
 		<img class="data-graphic" src="images/can-v-usa.png" alt="data-graphic">
 	</section>
-
+<section class="argument">
+		<h1 class="hidden"> Data Point 4 </h1>
+		<h2 class="subhead">Canada vs USA vs Norway Medal Chart comparison by years 1924-2014</h2>
+		<p></p>
+		<img class="data-graphic" src="images/bar.png" alt="data-graphic">
+	</section>
 
 	<footer>
 		<h1 class="hidden">Footer</h1>
-		<h2>Some Footer Stuff </h2>
+		<h2>Data vis python assignment footer :) </h2>
 
 	</footer>
 
